better sidebar styles and fix content overflows

--- a/src/files/styles/style.css
+++ b/src/files/styles/style.css
@@ -18,6 +18,7 @@ standalone: true
 
 	--barSize: 2.5rem;
 	--paddingSize: 3%;
+	--marginSize: 10px;
 
 	--bodyFont: sans-serif; /* -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
 	--bodyBackground: var(--colorLightestBrown);
@@ -59,7 +60,7 @@ html {
 	font-family: var(--bodyFont);
 	background: var(--bodyBackground);
 	color: var(--bodyColor);
-	word-wrap: break-word;
+	overflow-wrap: break-word;
 }
 html, body, div {
 	margin: 0;
@@ -90,8 +91,8 @@ pre code,
 	padding: 0 0.5em 0;
 	border: 1px solid var(--codeBorder);
 	border-radius: 0.5em;
-
-	word-wrap: normal;
+	break-inside: avoid;
+	page-break-inside: avoid;
 	white-space: pre;
 	font-family: var(--codeFont);
 	background: var(--codeBackground);
@@ -168,6 +169,7 @@ html, body, div, nav, section, aside, article {
 	background: white;
 	border-bottom: 1px solid var(--colorLightBrown);
 	box-shadow: 0 0 1px white;
+	overflow-y: auto;
 }
 
 /* topbar */
@@ -176,7 +178,6 @@ html, body, div, nav, section, aside, article {
 	grid-template-columns: 1fr 300px;
 	grid-template-rows: var(--barSize);
 	grid-template-areas: "links search";
-	overflow: hidden;
 }
 .topbar .search {
 	grid-area: search;
@@ -185,12 +186,13 @@ html, body, div, nav, section, aside, article {
 .links {
 	grid-area: links;
 	line-height: var(--barSize);
+	overflow: hidden;
 }
 .links a {
 	line-height: 1rem;
 	font-size: 1rem;
-	margin: 0 5px;
-	padding: 0 7px;
+	margin: 0 var(--marginSize);
+	padding: 0 var(--marginSize);
 	color: var(--colorDarkestBrown);
 	font-weight: bolder;
 }
@@ -204,8 +206,8 @@ html, body, div, nav, section, aside, article {
 	border-color: var(--colorLightGold);
 }
 .topbar .links a.logo {
-	margin-left: 5px;
 	padding-bottom: 3px;
+	margin-left: 0;
 }
 
 .topbar .links a.logo,
@@ -229,7 +231,7 @@ html, body, div, nav, section, aside, article {
 	grid-template-rows: var(--barSize);
 	grid-template-areas: "about links";
 	background: var(--bodyBackground);
-	padding: 0 var(--paddingSize);
+	padding: 0 var(--marginSize);
 	line-height: var(--barSize);
 }
 .bottombar .about {
@@ -270,25 +272,33 @@ html, body, div, nav, section, aside, article {
 	font-size: 1rem;
 	color: var(--colorDarkestBrown);
 	font-weight: bolder;
-	padding-left: 5px;
-	border-left: 3px solid transparent;
 }
-.list-menu a:hover,
-.list-menu .active {
-	color: var(--colorDarkGold);
+
+.sidebar .list-menu-title {
+	display: block;
+	width: 100%;
+	border-left: calc(var(--marginSize) / 2) solid transparent;
+}
+.sidebar .list-menu-title:hover,
+.sidebar .active .list-menu-title {
 	border-color: var(--colorLightGold);
 }
 
-.sidebar .list-menu-items {
-	margin: 0 15px;
+.sidebar ul ul .list-menu-title {
+	padding-left: calc(var(--marginSize) / 2);
 }
+.sidebar ul ul ul .list-menu-title {
+	padding-left: calc(var(--marginSize) * 1);
+	border-left: calc(var(--marginSize) * 2) solid transparent;
+}
+
 .list-menu h1,
 .list-menu h2,
 .list-menu h3,
 .list-menu h4,
 .list-menu h5,
 .list-menu h6 {
-	margin: 0.2em 5px;
+	margin: 0.2em 0;
 	padding: 0.2em 0;
 }
 
@@ -500,6 +510,7 @@ html, body, div, nav, section, aside, article {
 .block table {
 	font-size: 1em;
 	margin: 2em 0;
+	width: 100%;
 }
 .block th,
 .block td {
@@ -584,7 +595,28 @@ html, body, div, nav, section, aside, article {
 	border: 2px solid var(--colorLightestBrown);
 	display: block;
 	margin: 1em auto;
+}
+
+.block iframe,
+.block table,
+.block img {
 	max-width: 100%;
+}
+
+
+
+@media screen and (max-width: 600px) {
+	body {
+		--paddingSize: 5px;
+		--marginSize: 5px;
+	}
+	.block th,
+	.block td {
+		padding: 0;
+	}
+	.block-edit {
+		display: none;
+	}
 }
 
 /*
@@ -728,7 +760,7 @@ html, body, div, nav, section, aside, article {
 
 	// Allow code blocks to break
 	code
-		word-wrap: break-word;
+		overflow-wrap: break-word;
 
 	// Adjust font sizes
 	.page
